test_regress/t/t_var_ref_bad3.out
%Error: t/t_var_ref_bad3.v:10:18: Unsupported: ref/const ref as primary input/output: 'bad_primary_ref'
module t(ref int bad_primary_ref
                 ^~~~~~~~~~~~~~~
%Error: Exiting due to
